tests/snapshots/run_wpt_conformance__litert_erf_float16_5D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
erf.https.any.js erf float16 5D tensor, litert
 Failed to convert graph: graph conversion failed for litert: unsupported operation: Erf { input: 0, options: Some(MLOperatorOptions { label: "" }), outputs: [1] }

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    erfInput: f16[2, 1, 4, 1, 3];
  }

  nodes {
    [erfOutput] = erf(erfInput, label="");
  }

  outputs { erfOutput; }
}
